--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.0.13
+  provider: ^6.0.2
+  fluttertoast: ^8.0.9
+  flutter_svg: ^1.0.3
+
 
 dev_dependencies:
   flutter_test:
@@ -56,6 +61,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - assets/auth_pic.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
