--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.2
   fluttertoast: ^8.0.9
   flutter_svg: ^1.0.3
+  image_picker: ^0.8.4+11
+
 
 
 dev_dependencies:
