--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,14 +38,13 @@ dependencies:
   fluttertoast: ^8.0.9
   flutter_svg: ^1.0.3
   image_picker: ^0.8.4+11
-<<<<<<< HEAD
   flutter_typeahead: ^3.2.4
   url_launcher: ^6.0.20
-
-=======
   firebase_auth: ^3.3.12
   google_sign_in: ^5.2.4
->>>>>>> d2de4a0d53fa146d0813b1799fdc71c0f4090e33
+  http: ^0.13.4
+  cloud_firestore: ^3.1.11
+  firebase_core: ^1.14.0
 
 dev_dependencies:
   flutter_test:
