--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   http: ^0.13.4
   cloud_firestore: ^3.1.11
   firebase_core: ^1.14.0
+  hijri: ^3.0.0
 
 dev_dependencies:
   flutter_test:
