--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cloud_firestore: ^3.1.11
   firebase_core: ^1.14.0
   hijri: ^3.0.0
+  numberpicker: ^2.1.1
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +73,8 @@ flutter:
     - assets/aber_sabel.png
     - assets/restaurant.jpg
     - assets/google.png
+    - assets/ramadhan.png
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
