--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,10 @@ dependencies:
   flutter_polyline_points: ^1.0.0
   google_maps_flutter: ^2.1.3
   hijri: ^3.0.0
-
+  location: ^4.2.0
+  # google_map_location_picker: ^4.1.7
+  # localization: ^2.1.0
+  # geocoder: ^0.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
