--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ flutter:
     - assets/restaurant.jpg
     - assets/google.png
     - assets/ramadhan.png
+    - assets/localisation.svg
+    - assets/muslim.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
