--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
     - assets/muslim.png
     - assets/hilal.png
     - assets/hilel2.png
+    - assets/hilel3.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
