--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,15 +51,22 @@ dependencies:
   hijri: ^3.0.0
   location: ^4.2.0
   numberpicker: ^2.1.1
+  flutter_launcher_icons: ^0.9.2
 
   # google_map_location_picker: ^4.1.7
   # localization: ^2.1.0
   # geocoder: ^0.2.1
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.9.2"
   flutter_test:
     sdk: flutter
 
+
+flutter_icons:
+  image_path: "assets/aber_sabel.png"
+  android: true
+  ios: true
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
